--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,68 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box !important;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body{
+  margin: 0;
+  padding: 0;
+  background: #233637;
+  height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.diamond {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  transform: rotate(45deg);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+span:nth-child(1) {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 0;
+  border-top: 50px solid transparent;
+  border-right: 50px solid #20bc7d;
+  border-bottom: 50px solid #26c893;
+  border-left: 50px solid transparent;
+}
+
+span:nth-child(2) {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 0;
+  height: 0;
+  border-top: 50px solid #1fb67c;
+  border-right: 50px solid #20bc7d;
+  border-bottom: 50px solid #26c893;
+  border-left: 50px solid #55ddb9;
+}
+
+span:nth-child(3) {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 0;
+  height: 0;
+  border-top: 50px solid #1fb67c;
+  border-right: 50px solid #20bc7d;
+  border-bottom: 50px solid #26c893;
+  border-left: 50px solid #55ddb9;
+}
+
+span:nth-child(4) {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 0;
+  height: 0;
+  border-top: 50px solid #1fb67c;
+  border-right: 50px solid #20bc7d;
+  border-bottom: 50px solid #26c893;
+  border-left: 50px solid #55ddb9;
 }
